assets/style.scss
/* ... */
.bottom-nav {
  position: absolute;
  left: 50%;
  bottom: 10%;
  transform: translateX(-50%);
  display: flex;
  align-items: center;
  gap: 64px;

  .link {
    font-size: 16px;
    color: var(--gray);
    text-decoration: none;
    transition: 0.3s ease;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 10px;

    &::after {
      content: "";
      display: block;
      transform: translateY(8px);
      border-radius: 99999%;
      width: 6px;
      height: 6px;
      transition: 0.3s ease;
    }

    &:hover,
    &.active {
      &::after {
        transform: translateY(0);
        background-color: var(--dark);
      }
    }

    &.active,
    &:active {
      color: var(--dark);
    }
  }
}

.projects {
  width: 50vw;
  height: 60vh;
  margin: 0 auto;
  padding-top: 20vh;
  display: grid;
  grid-template-columns: repeat(3, minmax(0, 1fr));
  gap: 32px;
  position: relative;
  overflow-y: scroll;

  &::-webkit-scrollbar {
    width: 0px;
  }

  &::after {
    content: "";
    display: block;
    position: sticky;
    width: calc(100% * 3 + 32px * 2);
    height: 60px;
    background: linear-gradient(360deg, var(--light), transparent);
    bottom: 0;
    left: 0;
    pointer-events: none;
    transform: translateX(-35%);
  }

  .project-container {
    position: relative;
    opacity: 0;
    animation: 0.8s ease 0s forwards fadeUp;

    .github-icon {
      position: absolute;
      top: 18px;
      right: 16px;
      color: var(--gray);
      display: block;

      &:hover {
        color: var(--dark);
      }
    }
  }

  .project {
    display: flex;
    flex-direction: column;
    height: fit-content;
    background-color: var(--light);
    padding: 16px;
    border: 1px solid var(--border);
    border-radius: 4px;
    text-decoration: none;
    border-color: transparent;
    transition: 0.3s ease;

    &.deprecated {
      h2, p, span {
        opacity: 0.4;
      }
    }

    &:hover {
      opacity: 1;
      border-color: var(--border);
    }

    .title-container {
      display: flex;
      flex-direction: row;
      align-items: center;
      gap: 8px;
      margin: 0 0 8px;

      h2 {
        color: var(--dark);
        font-size: 18px;
        font-weight: normal;
        display: flex;
        align-items: center;
        gap: 8px;
        margin: 0;
      }

      .contributor-badge {
        font-size: 12px;
        color: var(--accent);
      }
    }

    p {
      color: var(--gray);
      font-size: 16px;
      margin: 16px 0 0;
      line-height: 22px;
    }
  }
}

@keyframes fade {
  from {
    opacity: 0%;
  }
  to {
    opacity: 100%;
  }
}

@keyframes title {
  from {
    opacity: 0%;
    transform: translateY(8px) rotate(2deg);
  }
  to {
    opacity: 100%;
    transform: translateY(0) rotate(0deg);
  }
}

@keyframes fadeUp {
  from {
    opacity: 0%;
    transform: translateY(8px);
  }
  to {
    opacity: 100%;
    transform: translateY(0);
  }
}

@media (max-width:768px) {
  .subtitle.map .background {
    display: none;
  }

  .subtitle .prev {
    top: 140px !important;
    right: -40px !important;
  }

  .projects {
    width: 80vw;
    height: 80vh;
    gap: 16px;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    overflow-x: hidden;

    .contributor-badge {
      display: none;
    }
  }

  .bottom-nav {
    bottom: 5%;
  }
}

